Initial bubbles contents for create http-request

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,6 @@ PORT=3000
 HOST=localhost
 HOST_URL=http://localhost:3000
 EXTERNAL_API =https://aaa/xxx/api
+ASSET_URL=https://localhost:8000
+LINE_CHANNEL_ACCESS_TOKEN=""
 
