--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,7 @@ HOST=localhost
 HOST_URL=http://localhost:3000
 EXTERNAL_API =https://aaa/xxx/api
 ASSET_URL=https://localhost:8000
+LABEL_NOTIFICATION="หน่วยอาคารและสถานที่"
 LINE_CHANNEL_ACCESS_TOKEN=""
-
+DRIVER_ACC=user1,user2,user3
+APPROVER=master1,master2
